meta tag change index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1.0, user-scalable=no">
   <meta content="description" name="description">
   <meta name="google" content="notranslate">
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
@@ -56,7 +56,7 @@
 
 <div class="white-text-container background-image-container heroImgHome" style="background-image: url('./assets/images/hero3.jpg')">
     <div class="opacity"></div>
-    <div class="container containerFlex">
+    <div class="container">
         <div class="row titleRow">
            
             <div class="col-md-6 heroTitle">
