--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <div class="row">
 
             <div class="col-xs-12 aboutImgContainer">
-               <img class="img-responsive aboutHeroImg" src="./assets/images/aboutImg5.jpg">
+               <img id="heroAbout" class="img-responsive aboutHeroImg" src="./assets/images/aboutImg5.jpg">
             </div>
         </div>
     </div>
@@ -75,10 +75,10 @@
 
                     <div class="row section-container-spacer">
                         <div class="col-md-6">
-                            <img class="img-responsive dreamImg" src="./assets/images/aboutImg6.png">
+                            <img id="dream" class="img-responsive dreamImg" src="./assets/images/aboutImg6.png">
                         </div>
                         <div class="col-md-6">
-                            <img class="img-responsive yearImg" src="./assets/images/aboutImg4.png">
+                            <img id="year" class="img-responsive yearImg" src="./assets/images/aboutImg4.png">
                         </div>
                     </div>
 
