--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 col-container col-container1">
+                <div id="yogaCol1" class="col-md-4 col-container col-container1">
                     <div class="fa-container">
                       <i class="fa heartLogo fa-heart-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -92,7 +92,7 @@
                         <p>You think you’re not bendy or flexible enough for yoga. Yoga is woo-woo hippie crap. You want to check it out, but you don’t know where to get started... <a class="readMore1" href="readMoreYoga.html">Read More</a></p>
                     </div>
                 </div>
-                <div class="col-md-4 col-container2">
+                <div id="yogaCol2" class="col-md-4 col-container2">
                     <div class="fa-container">
                       <i class="fa commentLogo fa-comment-o fa-3x" aria-hidden="true"></i>
                     </div>
