--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
         <div class="row cardRow">
             <div class="col-md-3 ">
                 <div class="pricing-card pricing-primary pricing-first">
-                    <h3>Virtual Yoga</h3>
+                    <h3 class="cardTitle15">Virtual Yoga</h3>
                     <h4 class="cardDescription1">Drop-in Class</h4>
                     <h6 class="price pricing15">15</h6>
                 </div>
