--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                      </div>   
                         <p class="section-container-spacer aboutPara1">Through her coaching, teaching, and facilitation, Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of unlocking potential and their achieving goals.</p>
 
-                    <div class="row section-container-spacer">
+                    <div class="row section-container-spacer about-images">
                         <div class="col-md-6">
                             <img id="dream" class="img-responsive dreamImg" src="./assets/images/aboutImg6.png">
                         </div>
