--- a/about.html
+++ b/about.html
@@ -69,16 +69,16 @@
         <div class="row">
                <div class="col-xs-12 col-md-8 col-md-offset-2">
                     <div class="text-center">
-                    <h1 class="aboutTitle">Hello!</h1>
-                     </div>   
+                      <h1 class="aboutTitle">Hello!</h1>
+                    </div>   
                         <p class="section-container-spacer aboutPara1">Through her coaching, teaching, and facilitation, Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of unlocking potential and their achieving goals.</p>
 
                     <div class="row section-container-spacer about-images">
                         <div class="col-md-6">
-                            <img id="dream" class="img-responsive dreamImg" src="./assets/images/aboutImg6.png">
+                            <img class="img-responsive dreamImg" src="./assets/images/aboutImg6.png">
                         </div>
                         <div class="col-md-6">
-                            <img id="year" class="img-responsive yearImg" src="./assets/images/aboutImg4.png">
+                            <img class="img-responsive yearImg" src="./assets/images/aboutImg4.png">
                         </div>
                     </div>
 
