--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-xs-12">
 
-                <div class="row">
+                <div class="contactRow">
                     <div class="col-md-6">
                       <form action="https://mailchimp.us19.list-manage.com/subscribe/post?u=89dc1dab759e1bcec662bf8d8&amp;id=5df776930e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate reveal-content contact-form" target="_blank" >
                         <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>    
