--- a/services.html
+++ b/services.html
@@ -53,10 +53,10 @@
 
 
 
-<div class="section-container card-container">
+<div class="section-container">
     <div class="container servicesCol">
         <div class="row section-container-spacer">
-            <div class="col-xs-12 servicesColTop">
+            <div class="col-xs-12">
                 <div class="text-center">
                     <h1 class="serviceTitle">Services</h1>
                 </div>
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <div class="row cardRow">
+        <div class="row">
             <div class="col-md-3 ">
                 <div class="pricing-card pricing-primary pricing-first">
                     <h3 class="cardTitle15">Virtual Yoga</h3>
