--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
             <div class="col-md-3 ">
                 <div class="pricing-card pricing-primary pricing-first">
                     <h3 class="cardTitle15">Virtual Yoga</h3>
-                    <h4 class="cardDescription1">Drop-in Class</h4>
+                    <h4 class="cardDescription">Drop-in Class</h4>
                     <h6 class="price pricing15">15</h6>
                 </div>
                 <div class="pricing-features">
@@ -89,7 +89,7 @@
             <div class="col-md-3">
                 <div class="pricing-card pricing-info pricing-second">
                     <h3 class="cardTitlePricing">Yoga Bundle</h3>
-                    <h4 class="cardDescription2">5 Classes</h4>
+                    <h4 class="cardDescription">5 Classes</h4>
                     <h6 class="price pricing50">50</h6>
                 </div>
                 <div class="pricing-features">
@@ -106,7 +106,7 @@
             <div class="col-md-3">
                 <div class="pricing-card pricing-secondary pricing-third">
                     <h3 class="cardTitlePricing">Private Yoga</h3>
-                    <h4 class="cardDescription3">Individualized Yoga</h4>
+                    <h4 class="cardDescription">Individualized Yoga</h4>
                     <h6 class="price pricing85">85</h6>
                 </div>
                 <div class="pricing-features">
@@ -122,7 +122,7 @@
             <div class="col-md-3">
               <div class="pricing-card pricing-secondary pricing-fourth">
                   <h3>Coaching</h3>
-                  <h4 class="cardDescription4">Let's Talk</h4>
+                  <h4 class="cardDescription">Let's Talk</h4>
                   <h6 class="price"> <span></span></h6>
               </div>
               <div class="pricing-features">
