--- a/terms85.html
+++ b/terms85.html
@@ -97,12 +97,13 @@
 
 
 <footer>
-  <div class="section-container footer-container">
+  <div class="section-container footer-container footerFlex">
       <div class="container">
           <div class="row responsiveFooter">
                   <div class="col-md-4 footerContainerLeft">
-                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle1">Learn More</h4></a>
-                      <p class="footerClassText1">Hear my story, and how we can achieve your goals.</p>
+                      <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
+                      <p class="footerClassText1">Learn more about my story, </p>
+                      <p class="footerClassText1">and how we can achieve your goals.</p>
                   </div>
 
                   <div class="col-md-4 footerContainerMid">
@@ -122,7 +123,7 @@
                         </a>
                       </p>
                     <div class="footerLinkMid">  
-                      <p><small>© Elizabeth Muniot 2020</small</p> 
+                      <p><small>© Elizabeth Muniot 2021</small</p> 
                       <p class="footerLink1"><small>Website Created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
                       <p class="footerLink2"><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p> 
                     </div>    
