--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 <footer>
     <div class="section-container footer-container footerFlex">
         <div class="container">
-            <div class="row responsiveFooter">
+            <div class="row">
                     <div class="col-md-4 footerContainerLeft">
-                        <a href="about.html" style="text-decoration: none;"><h4 class="footerTitle">Learn More</h4></a>
+                        <a href="about.html"><h4 class="footerTitle">Learn More</h4></a><br>
                         <p class="footerClassText1">Learn more about my story, </p>
-                        <p class="footerClassText1">and how we can achieve your goals.</p>
+                        <p class="footerClassText">and how we can achieve your goals.</p>
                     </div>
   
                     <div class="col-md-4 footerContainerMid">
@@ -167,8 +167,8 @@
                         </p>
                       <div class="footerLinkMid">  
                         <p><small>© Elizabeth Muniot 2021</small</p> 
-                        <p class="footerLink1"><small>Website Created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
-                        <p class="footerLink2"><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p> 
+                        <p class="footerTextCreate"><small>Website created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
+                        <p><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p> 
                       </div>    
                     </div>
   
