--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="row">
                     <div class="col-md-4 footerContainerLeft">
                         <a href="about.html"><h4 class="footerTitle">Learn More</h4></a><br>
-                        <p class="footerClassText1">Learn more about my story, </p>
+                        <p class="footerLeftText1">learn more about my story, </p>
                         <p class="footerClassText">and how we can achieve your goals.</p>
                     </div>
   
@@ -179,7 +179,7 @@
                         </div>
                         <div class="subscribeFooter">
                             <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                            <p class="footerClassText">Click subscribe to sign up for our newsletter.</p>
+                            <p class="footerClassText">click subscribe to sign up for our newsletter.</p>
                         </div>
                         <div class="contactFooter">
                             <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
