--- a/readMoreConsult.html
+++ b/readMoreConsult.html
@@ -108,54 +108,54 @@
 
 <footer>
   <div class="section-container footer-container footerFlex">
-      <div class="container">
-          <div class="row">
-                  <div class="col-md-4 footerContainerLeft">
-                      <a href="about.html"><h4 class="footerTitle footerMarginTop">Learn More</h4></a><br>
-                      <p class="footerLeftText1">learn more about my story, </p>
-                      <p class="footerClassText">and how we can achieve your goals.</p>
-                  </div>
+    <div class="container containerFooter">
+        <div class="row">
+                <div class="col-md-4 footerContainerLeft">
+                    <a href="about.html"><h4 class="footerTitle footerMarginTop">Learn More</h4></a><br>
+                    <p class="footerLeftText1">learn more about my story, </p>
+                    <p class="footerClassText">and how we can achieve your goals.</p>
+                </div>
 
-                  <div class="col-md-4 footerContainerMid">
-                      <h4 class="footerTitleMid">Visit & Share!</h4>
-                      <p class="shareLinks">
-                          <!-- <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                          <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </a> -->
-                        <!-- <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                          <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a> -->
-                        <a href="https://www.linkedin.com/in/elizabethmuniot/" class="social-round-icon white-round-icon fa-icon" title="">
-                          <i class="fa fa-linkedin" aria-hidden="true"></i>
-                        </a>
-                        <a href="https://www.instagram.com/elizabethmuniot/" class="social-round-icon white-round-icon fa-icon" title="">
-                          <i class="fa fa-instagram" aria-hidden="true"></i>
-                        </a>
-                      </p>
-                    <div class="footerLinkMid">
-                        <p><small>© Elizabeth Muniot 2021</small</p> 
-                        <p class="footerTextCreate"><small>Website created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
-                        <p><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
-                    </div>    
-                  </div>
+                <div class="col-md-4 footerContainerMid">
+                    <h4 class="footerTitleMid">Visit & Share!</h4>
+                    <p class="shareLinks">
+                        <!-- <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                      </a> -->
+                      <!-- <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                      </a> -->
+                      <a href="https://www.linkedin.com/in/elizabethmuniot/" class="social-round-icon white-round-icon fa-icon" title="">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                      </a>
+                      <a href="https://www.instagram.com/elizabethmuniot/" class="social-round-icon white-round-icon fa-icon" title="">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                      </a>
+                    </p>
+                  <div class="footerLinkMid">
+                      <p><small>© Elizabeth Muniot 2021</small</p> 
+                      <p class="footerTextCreate"><small>Website created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
+                      <p><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
+                  </div>    
+                </div>
 
-                  <div class="col-md-4 footerContainerRight">
-                      <div class="servicesFooter">
-                          <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Work with Me</h4></a>
-                          <p class="footerClassText">check out our list of services.</p>
-                      </div>
-                      <div class="subscribeFooter">
-                          <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                          <p class="footerClassText">click subscribe to sign up for our newsletter.</p>
-                      </div>
-                      <div class="contactFooter">
-                          <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
-                          <p class="footerClassText">leave me a message</p>                           
-                      </div>
+                <div class="col-md-4 footerContainerRight">
+                    <div class="servicesFooter">
+                        <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Work with Me</h4></a>
+                        <p class="footerClassText">check out our list of services.</p>
+                    </div>
+                    <div class="subscribeFooter">
+                        <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
+                        <p class="footerClassText">click subscribe to sign up for our newsletter.</p>
+                    </div>
+                    <div class="contactFooter">
+                        <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
+                        <p class="footerClassText">leave me a message</p>                           
+                    </div>
 
-                  </div>
-          </div>
-      </div>
+                </div>
+        </div>
+    </div>
   </div>
 </footer>
 
