--- a/index.html
+++ b/index.html
@@ -54,16 +54,15 @@
 
 
 
-<div class="white-text-container background-image-container heroImgHome" style="background-image: url('./assets/images/hero3.jpg')">
+<div class="white-text-container background-image-container" style="background-image: url('./assets/images/hero3.jpg')">
     <div class="opacity"></div>
-    <div class="container">
-        <div class="row titleRow">
-           
-            <div class="col-md-6 heroTitle">
-                <h1 id="firstName2">Sage Change<span id="studioName2"></span></h1>
-                <p class="responsePad" id="titleDescription"><small id="homeHeroDescription" class="signature pull-right homeDescription">your partner for intentional transitions</small></p>
-            </div>
-
+        <div class="container">
+            <div class="row heroRow">           
+                <div class="col-md-6 containerTitleFlex">
+                    <h1 id="heroTitle">Sage Change</h1>
+                    <p id="heroDescription"><small class="signature">your partner for intentional transitions</small></p>
+                </div>
+            </div>    
         </div>
     </div>
 </div>
@@ -72,7 +71,7 @@
     <div class="container">
             <div class="row row-center responsiveRow">
                 <div class="col-md-12 section-container-spacer">
-                    <div class="text-center text-center1">
+                    <div class="text-center">
                         <h2 class="titleSmartPhone">Welcome to Sage Change</h2>
                         <p class="subTitle homeDescription2"> Yoga + Coaching for Sustained Change</p> 
                         <p></p>         
@@ -128,9 +127,9 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-center text-center2">
-                    <h2 class="eventDescription1">Free 30-Minute Session</h2>
-                    <p class="eventDescription2">Subscribe to receive a 30-minute session.</p>
+                <div class="text-center">
+                    <h2 id="bannerTitle">Free 30-Minute Session</h2>
+                    <p id="bannerDescription">Subscribe to receive a 30-minute session.</p>
                     <a href="./contact.html" title="" class="btn btn-primary btn-lg homePageBtn">I'm in</a>
                 </div>
             </div>
