--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -73,11 +73,11 @@
     </div>
 </div>
 
-<div class="section-container imgContainer">
+<div class="section-container">
   <div class="container">
       <div class="row">
              <div class="col-xs-12 col-md-8 col-md-offset-2">   
-                  <div class="row section-container-spacer">
+                  <div class="row section-container-spacer imgContainer">
                       <div class="col-md-6">
                           <img id="thinkImg" class="img-responsive thinkAboutImg" src="./assets/images/coachimg1.png">
                       </div>
