--- a/readMoreYoga.html
+++ b/readMoreYoga.html
@@ -70,21 +70,16 @@
     </div>
 </div>
 
-<div class="section-container imgContainer">
+<div class="section-container">
   <div class="container">
       <div class="row">
              <div class="col-xs-12 col-md-8 col-md-offset-2">   
-                  <div class="row section-container-spacer">
+                  <div class="row section-container-spacer imgContainer">
                       <div class="col-md-6">
                           <img class="img-responsive aboutYogaImg" src="./assets/images/aboutImg1.jpg">
                       </div>
-                      <!-- <div class="col-md-6">
-                          <img class="img-responsive" src="./assets/images/yoga1.png">
-                      </div>
-                  </div> -->
-
-             </div>
-          </div>
+                  </div>
+              </div>
       </div>
   </div>
 </div>
