--- a/terms85.html
+++ b/terms85.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
+  <meta name="google" content="notranslate">
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
 
   <!-- Disable tap highlight on IE -->
