iphone 10test MQ

--- a/terms15.html
+++ b/terms15.html
@@ -53,13 +53,13 @@
 
 <div class="section-container">
   <div class="container classInfoContainer">
-      <div class="row section-container-spacer termsHead">
+      <div class="row section-container-spacer">
           <div class="col-xs-12 termTitle">
               <div class="text-center">
-                  <h1 class="termH1">Class Info</h1>
+                  <h1>Class Info</h1>
               </div>
               <div class="col-md-8 col-md-offset-2">
-                  <p class="termsDescription">Thank you for your interest in the one-time session for $15, please take a moment to read and review the PDF documents below prior to checkout. 
+                  <p class="classDescription">Thank you for your interest in the one-time session for $15, please take a moment to read and review the PDF documents below prior to checkout. 
                   </p>
               </div>
           </div>
