--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <div class="row">
 
             <div class="col-xs-12 aboutImgContainer">
-               <img id="heroAbout" class="img-responsive aboutHeroImg" src="./assets/images/aboutImg5.jpg">
+               <img class="img-responsive aboutHeroImg" src="./assets/images/aboutImg5.jpg">
             </div>
         </div>
     </div>
