--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 
 <div class="section-container border-section-container section-container-home">
-    <div class="container">
+    <div class="container responsiveRowParent">
             <div class="row row-center responsiveRow">
                 <div class="col-md-12 section-container-spacer">
                     <div class="text-center">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
 
-                <div id="yogaCol1" class="col-md-4 col-container col-container1">
+                <div class="col-md-4 center-block">
                     <div class="fa-container">
                       <i class="fa heartLogo fa-heart-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -91,7 +91,7 @@
                         <p>You think you’re not bendy or flexible enough for yoga. Yoga is woo-woo hippie crap. You want to check it out, but you don’t know where to get started... <a class="readMore1" href="readMoreYoga.html">Read More</a></p>
                     </div>
                 </div>
-                <div id="yogaCol2" class="col-md-4 col-container2">
+                <div class="col-md-4 center-block">
                     <div class="fa-container">
                       <i class="fa commentLogo fa-comment-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -139,16 +139,16 @@
 
 
 <footer>
-    <div class="section-container footer-container footerFlex">
-      <div class="container containerFooter">
+    <div class="section-container footer-container">
+      <div class="container containerFooter footerFlex">
           <div class="row">
-                  <div class="col-md-4 footerContainerLeft">
+                  <div class="col-md-4 footerLeft">
                       <a href="about.html"><h4 class="footerTitle footerMarginTop">Learn More</h4></a><br>
                       <p class="footerLeftText1">learn more about my story, </p>
                       <p class="footerClassText">and how we can achieve your goals.</p>
                   </div>
 
-                  <div class="col-md-4 footerContainerMid">
+                  <div class="col-md-4 footerMid">
                       <h4 class="footerTitleMid">Visit & Share!</h4>
                       <p class="shareLinks">
                           <!-- <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
@@ -164,14 +164,14 @@
                           <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                       </p>
-                    <div class="footerLinkMid">
+                    <div>
                         <p><small>© Elizabeth Muniot 2021</small</p> 
                         <p class="footerTextCreate"><small>Website created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
                         <p><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
                     </div>    
                   </div>
 
-                  <div class="col-md-4 footerContainerRight">
+                  <div class="col-md-4 footerRight">
                       <div class="servicesFooter">
                           <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Work with Me</h4></a>
                           <p class="footerClassText">check out our list of services.</p>
