html/css changes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="section-container border-section-container section-container-home">
     <div class="container responsiveRowParent">
             <div class="row row-center responsiveRow">
-                <div class="col-md-12 section-container-spacer">
+                <div class="col-md-12 center-block section-container-spacer">
                     <div class="text-center">
                         <h2 class="titleSmartPhone">Welcome to Sage Change</h2>
                         <p class="subTitle homeDescription2"> Yoga + Coaching for Sustained Change</p> 
@@ -126,7 +126,7 @@
 <div class="section-container background-color-container white-text-container banner-container">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-md-12">
                 <div class="text-center">
                     <h2 id="bannerTitle">Free 30-Minute Session</h2>
                     <p id="bannerDescription">Subscribe to receive a 30-minute session.</p>
@@ -140,15 +140,15 @@
 
 <footer>
     <div class="section-container footer-container">
-      <div class="container containerFooter footerFlex">
-          <div class="row">
-                  <div class="col-md-4 footerLeft">
+      <div class="container footerFlex">
+          <div class="row text-center justify-content-center">
+                  <div class="col-sm-4">
                       <a href="about.html"><h4 class="footerTitle footerMarginTop">Learn More</h4></a><br>
                       <p class="footerLeftText1">learn more about my story, </p>
                       <p class="footerClassText">and how we can achieve your goals.</p>
                   </div>
 
-                  <div class="col-md-4 footerMid">
+                  <div class="col-sm-4">
                       <h4 class="footerTitleMid">Visit & Share!</h4>
                       <p class="shareLinks">
                           <!-- <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
@@ -171,14 +171,14 @@
                     </div>    
                   </div>
 
-                  <div class="col-md-4 footerRight">
+                  <div class="col-sm-4">
                       <div class="servicesFooter">
                           <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Work with Me</h4></a>
                           <p class="footerClassText">check out our list of services.</p>
                       </div>
                       <div class="subscribeFooter">
                           <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                          <p class="footerClassText">click subscribe to sign up for our newsletter.</p>
+                          <p class="footerClassText">click to sign up for our newsletter.</p>
                       </div>
                       <div class="contactFooter">
                           <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
