--- a/readMoreConsult.html
+++ b/readMoreConsult.html
@@ -107,16 +107,16 @@
 
 
 <footer>
-  <div class="section-container footer-container footerFlex">
-    <div class="container containerFooter">
+  <div class="section-container footer-container">
+    <div class="container containerFooter footerFlex">
         <div class="row">
-                <div class="col-md-4 footerContainerLeft">
+                <div class="col-md-4 footerLeft">
                     <a href="about.html"><h4 class="footerTitle footerMarginTop">Learn More</h4></a><br>
                     <p class="footerLeftText1">learn more about my story, </p>
                     <p class="footerClassText">and how we can achieve your goals.</p>
                 </div>
 
-                <div class="col-md-4 footerContainerMid">
+                <div class="col-md-4 footerMid">
                     <h4 class="footerTitleMid">Visit & Share!</h4>
                     <p class="shareLinks">
                         <!-- <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
@@ -132,14 +132,14 @@
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                       </a>
                     </p>
-                  <div class="footerLinkMid">
+                  <div>
                       <p><small>© Elizabeth Muniot 2021</small</p> 
                       <p class="footerTextCreate"><small>Website created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
                       <p><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
                   </div>    
                 </div>
 
-                <div class="col-md-4 footerContainerRight">
+                <div class="col-md-4 footerRight">
                     <div class="servicesFooter">
                         <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Work with Me</h4></a>
                         <p class="footerClassText">check out our list of services.</p>
