--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -112,15 +112,15 @@
 
 <footer>
   <div class="section-container footer-container">
-    <div class="container containerFooter footerFlex">
-        <div class="row">
-                <div class="col-md-4 footerLeft">
+    <div class="container footerFlex">
+        <div class="row text-center justify-content-center">
+                <div class="col-sm-4">
                     <a href="about.html"><h4 class="footerTitle footerMarginTop">Learn More</h4></a><br>
                     <p class="footerLeftText1">learn more about my story, </p>
                     <p class="footerClassText">and how we can achieve your goals.</p>
                 </div>
 
-                <div class="col-md-4 footerMid">
+                <div class="col-sm-4">
                     <h4 class="footerTitleMid">Visit & Share!</h4>
                     <p class="shareLinks">
                         <!-- <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
@@ -143,14 +143,14 @@
                   </div>    
                 </div>
 
-                <div class="col-md-4 footerRight">
+                <div class="col-sm-4">
                     <div class="servicesFooter">
                         <a href="services.html" style="text-decoration: none;"><h4 class="footerTitle">Work with Me</h4></a>
                         <p class="footerClassText">check out our list of services.</p>
                     </div>
                     <div class="subscribeFooter">
                         <a href="contact.html" style="text-decoration: none;"><h4 class="footerTitle">Subscribe</h4></a>
-                        <p class="footerClassText">click subscribe to sign up for our newsletter.</p>
+                        <p class="footerClassText">click to sign up for our newsletter.</p>
                     </div>
                     <div class="contactFooter">
                         <a href="mailto:elizabethmuniot@gmail.com" style="text-decoration: none;"><h4 class="footerTitle">Contact</h4></a>
