--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -79,10 +79,10 @@
              <div class="col-xs-12 col-md-8 col-md-offset-2">   
                   <div class="row section-container-spacer imgContainer">
                       <div class="col-md-6">
-                          <img id="thinkImg" class="img-responsive thinkAboutImg" src="./assets/images/coachimg1.png">
+                          <img class="img-responsive thinkAboutImg" src="./assets/images/coachimg1.png">
                       </div>
                       <div class="col-md-6">
-                          <img id="changeImg" class="img-responsive timeForChangeImg" src="./assets/images/coachimg2.jpg">
+                          <img class="img-responsive timeForChangeImg" src="./assets/images/coachimg2.jpg">
                       </div>
                   </div>
 
