--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="container">
             <div class="row heroRow">           
                 <div class="col-md-6 containerTitleFlex">
-                    <h1 id="heroTitle" class="responseTitle">Sage Change</h1>
-                    <p id="heroDescription"><small class="signature responseDescription">your partner for intentional transitions</small></p>
+                    <h1 id="heroTitle">Sage Change</h1>
+                    <p><small id="responseDescription" class="signature">your partner for intentional transitions</small></p>
                 </div>
             </div>    
         </div>
