--- a/readMoreCoach.html
+++ b/readMoreCoach.html
@@ -100,6 +100,7 @@
                     <h1>Testimonials</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2 coachPara4">
+                    <p>Conversations with Elizabeth are uniquely enlightening and empowering. I always step away with a new perspective or narrative about whatever is on my mind, which I could not have pinpointed on my own. Her style is not to feed answers but instead to listen and prompt you to spiral closer and closer to the truth. And this is the empowering element - she shares her wisdom in such a way that keeps you in the captain seat while she helps navigate. - Christiane C.</p>
                     <p>Elizabeth’s holistic approach was critical for me and I cannot credit her enough for my professional and leadership growth. With her guidance, I have a clearer understanding of my passions; applying my skills: re-evaluating my performance; and seeking experiences – purposefully.  – Brian K.C. </p>
                     <p>Elizabeth had a big impact on me. She is a gifted teacher with an empathic ability to read and feel into the people around you. I could feel her benevolent energy all weekend encircling me like a warm hug. She is changing people's lives, including mine. – Sarah G. </p>
                     <p>With Elizabeth, I made a mind/body connection that will serve me for a long time. I feel good in my body and I trust it in a way I haven’t for a while. I feel beautiful again. And centered again. 
