--- a/terms15.html
+++ b/terms15.html
@@ -52,7 +52,7 @@
 </header>
 
 <div class="section-container">
-  <div class="container classInfoContainer">
+  <div class="container">
       <div class="row section-container-spacer">
           <div class="col-xs-12 termTitle">
               <div class="text-center">
