css styles - banner

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
     </div>
 </div>
 
-<div class="section-container background-color-container white-text-container banner-container">
+
+
+<div class="section-container background-color-container white-text-container banner-container styleBanner">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -134,9 +136,9 @@
                 </div>
             </div>
         </div>
-     </div>
- </div>
-
+    </div>
+</div>
+   
 
 <footer>
     <div class="section-container footer-container">
