--- a/terms50.html
+++ b/terms50.html
@@ -13,13 +13,10 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
-  <!-- <link href="./assets/favicon.ico" rel="icon"> -->
-  <link rel="icon" href="guru.png" type="image/x-icon">
+  <link href="./assets/favicon.ico" rel="icon"> 
   <link href="./main.a3f694c0.css" rel="stylesheet">
-  
-
-  <title>Sage Change - Elizabeth Muniot</title>  
-  
+  <title>Sage Change - Elizabeth Muniot</title>
+  <link rel="icon" href="./assets/images/yinyang.webp" type="image/x-icon">  
 </head>
 
 <body>
