--- a/about.html
+++ b/about.html
@@ -50,18 +50,17 @@
 
 
 
-<div class="">
+<div class="section-container">
     <div class="container">
         <div class="row">
-
-            <div class="col-xs-12 aboutImgContainer">
-               <img class="img-responsive aboutHeroImg" src="./assets/images/aboutImg5.jpg">
+            <div class="col-xs-12">
+               <img class="img-responsive img-fluid" src="./assets/images/aboutImg5.jpg">
             </div>
         </div>
     </div>
 </div>
 
-<div class="section-container sectionContAbout">
+<div class="section-container">
     <div class="container">
         <div class="row">
                <div class="col-xs-12 col-md-8 col-md-offset-2">
