--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta content="description" name="description">
   <meta name="google" content="notranslate">
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
-  <meta property="og:image" content= https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg)/>
+  <!-- <meta property="og:image" content= https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg)/> -->
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -17,6 +17,7 @@
   <link href="./main.a3f694c0.css" rel="stylesheet">
   <title>Sage Change - Elizabeth Muniot</title>
   <link rel="icon" href="./assets/images/yinyang.webp" type="image/x-icon">  
+  <link rel="icon" href="./assets/images/hero3.jpg" type="image">  
 </head>
 
 <body>
