meta tags for socials

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <meta content="description" name="description">
   <meta name="google" content="notranslate">
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
+  <!-- Search Engine -->
+  <meta name="description" content="Sage Change provides real time virtual yoga sessions. Through private sessions and coaching Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of  achieving goals">
+  <meta name="image" content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg">
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="Sage Change - Elizabeth Muniot">
+  <meta itemprop="description" content="Sage Change provides real time virtual yoga sessions. Through private sessions and coaching Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of  achieving goals">
+  <meta itemprop="image" content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg">
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="Sage Change - Elizabeth Muniot">
+  <meta name="og:description" content="Sage Change provides real time virtual yoga sessions. Through private sessions and coaching Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of  achieving goals">
+  <meta name="og:type" content="website">
   <!-- <meta property="og:image" content= https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg)/> -->
 
   <!-- Disable tap highlight on IE -->
