--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
 
 
-<div class="section-container">
+<div class="section-container section-container-about">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
