language edits, browser icon change

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="./main.a3f694c0.css" rel="stylesheet">
   <title>Sage Change - Elizabeth Muniot</title>
-  <link rel="icon" href="./assets/images/yinyang.webp" type="image/x-icon">  
+  <link rel="icon" href="./assets/images/blk-lotus-icon-3.png" type="image/x-icon">  
 </head>
 
 <body>
@@ -54,7 +54,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-               <img class="img-responsive img-fluid" src="./assets/images/aboutImg5.jpg">
+               <!-- <img class="img-responsive img-fluid" src="./assets/images/aboutImg5.jpg"> -->
             </div>
         </div>
     </div>
@@ -67,8 +67,7 @@
                     <div class="text-center">
                       <h1 class="aboutTitle">Hello!</h1>
                     </div>   
-                        <p class="section-container-spacer aboutPara1">Through her coaching, teaching, and facilitation, Elizabeth empowers others to reach beyond their own perceived limitations. She is skilled at helping her clients identify and remove barriers that get in the way of unlocking potential and their achieving goals.</p>
-
+                        <p class="section-container-spacer aboutPara1">I’m a <a href="readMoreYoga.html" class="yogaSubBtn" title="">movement teacher, </a> <a href="readMoreCoach.html" class="yogaSubBtn" title="">coach, </a> and facilitator that will empower you to reach beyond your own perceived limitations by helping you identify, then remove barriers that get in the way of unlocking potential and achieving your goals.</p>
                     <div class="row section-container-spacer about-images">
                         <div class="col-md-6">
                             <img class="img-responsive dreamImg" src="./assets/images/aboutImg6.png">
@@ -81,8 +80,8 @@
                </div>
                
                 <div class="col-xs-12 col-md-8 col-md-offset-2 aboutPara4">              
-                        <p class="aboutPara2"> Prior to her consulting work, Elizabeth was the Assistant Director of George Mason University’s Center for Social Entrepreneurship, where she developed co-curricular activities, facilitated workshops, mentored students, and served as the Director of the Social Innovation Program. At both Share Our Strength and the Lupus Foundation of America - DMV Chapter, Elizabeth mobilized diverse volunteer networks to consistently exceed fundraising goals. Working in partnership with national corporations and nonprofits, Elizabeth has developed community service projects, which served as an integral part of strategic leadership training and team-building programs. She also served as the Director of Corporate Relations for The Arc of the United States, initiating the organization’s first media sponsorship.</p>
-                        <p class="aboutPara3"> Elizabeth holds a B.A. in Political Science from Barnard College, Columbia University and a M.S. in Organization Development from the American University. She has completed more than 600 hours of yoga teacher training. She lives outside Washington, D.C. with her family.</p>
+                        <p class="aboutPara2"> Prior to coaching, I was the Assistant Director of George Mason University’s Center for Social Entrepreneurship, where I developed co-curricular activities, facilitated workshops, and mentored students. At both Share Our Strength and the Lupus Foundation of America, I mobilized diverse volunteer networks to consistently exceed fundraising goals. Working in partnership with national corporations and nonprofits, I created community service projects, which served as an integral part of strategic leadership training and team-building programs.</p>
+                        <p class="aboutPara3"> I have a B.A. in Political Science from Barnard College, Columbia University and a M.S. in Organization Development from the American University. I’ve completed more than 600 hours of yoga teacher training. </p>
                             <!-- <small class="signature pull-right">Elizabeth Muniot</small> -->
                 </div>
             </div>
