--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="./main.a3f694c0.css" rel="stylesheet">
   <title>Sage Change - Elizabeth Muniot</title>
-  <link rel="icon" href="./assets/images/yinyang.webp" type="image/x-icon">  
+  <link rel="icon" href="./assets/images/blk-lotus-icon-3.png" type="image/x-icon">   
 </head>
 
 <body>
