--- a/readMoreYoga.html
+++ b/readMoreYoga.html
@@ -15,7 +15,7 @@
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="./main.a3f694c0.css" rel="stylesheet">
   <title>Sage Change - Elizabeth Muniot</title>
-  <link rel="icon" href="./assets/images/yinyang.webp" type="image/x-icon">  
+  <link rel="icon" href="./assets/images/blk-lotus-icon-3.png" type="image/x-icon">  
 </head>
 
 <body>
@@ -58,9 +58,10 @@
                     <h1 class="yogaTitle">Yoga</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2 aboutYogaPara1">
-                    <p>I like teaching people who are skeptical about yoga. We'll move. We'll breathe. Two things you do all the time, every day. It’s simple. I promise. I teach interactive yoga via Zoom. I like to have a dialogue, where clients can ask questions or chime in if they need clarification about something. Zoom allows me to demonstrate a pose and get to see my students in real time, so I can give suggestions, modifications and words of encouragement. Sign up for a free Zoom class. </p>
-                    <p>I found yoga super intimidating for a long time. I took my first yoga class at the 92nd Street Y more than 20 years ago. I pretty much hated it. I didn’t feel bendy or flexible enough. Everyone around me seemed to know what was happening. I didn’t get all the chanting, and the Sanskrit. I would have rather been doing anything else, but I did feel calmer. </p>
-                    <p>After finishing grad school in 2011, I went to Costa Rica for my first yoga retreat, which I didn’t realize was a 100 hour teacher training. My science geek awoke with the anatomy lessons, and the combination of the physical/breathe/mind practice awoke a dormant spiritual interest. When I got back to DC, I completed 500 hours of training through YogaWorks. Curious? Want to know more? Email me <a href="mailto:elizabethmuniot@gmail.com" class="yogaContactBtn" title="">here </a>and we can arrange a time to talk. Please also <a href="contact.html" class="yogaSubBtn" title="">subscribe </a> to sign up for our newsletter, and receive a FREE 30 minute yoga session.</p>
+                    <p>I like teaching people who are skeptical about yoga. We'll move. We'll breathe. Two things you do all the time, every day. It’s simple. I promise. I teach interactive yoga via Zoom. I like to have a dialogue, where you can ask questions or chime in if you need clarification. Zoom lets me demonstrate a pose and then see you do it, so I can give suggestions, modifications, and words of encouragement. <a href="services.html" class="yogaSubBtn" title="">Sign Up </a>for a free private Zoom class.</p>
+                    <p>I found yoga super intimidating for a long time. I took my first yoga class in college. I pretty much hated it. I didn’t feel bendy or flexible enough. Everyone around me seemed to know what was happening. I didn’t get the chanting, and the Sanskrit. I would have rather been doing anything else, but I did feel calmer. More grounded. More myself. So, for 20 years I kept going back. </p>
+                    <p>In 2011, I went to Costa Rica for my first yoga retreat, which I didn’t realize was a 100-hour teacher training. My science geek awoke with the anatomy lessons, and the combination of the physical/breathe/mind practice awoke a dormant spiritual interest. When I got back to DC, I completed 500 hours of training through YogaWorks. Curious? Want to know more? <a href="contact.html" class="yogaSubBtn" title="">Subscribe</a> to my newsletter and get a free, 30-minute yoga session.
+                    </p>
                 </div>
             </div>
         </div>
