html errors fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta content="description" name="description">
+  <!-- <meta content="description" name="description"> -->
   <meta name="google" content="notranslate">
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
   <!-- Search Engine -->
@@ -14,7 +14,7 @@
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Sage Change - Elizabeth Muniot">
   <meta itemprop="description" content="Sage Change provides real time virtual yoga, private sessions and coaching. Elizabeth empowers others to reach beyond limitations to achieve goals">
-  <meta itemprop="image" content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg">
+  <meta itemprop="image" content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3-min.jpg">
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Sage Change - Elizabeth Muniot">
   <meta name="og:description" content="Sage Change provides real time virtual yoga, private sessions and coaching. Elizabeth empowers others to reach beyond limitations to achieve goals">
@@ -43,7 +43,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html" class="brand-logo center" id="firstName1" >Elizabeth Muniot<span id="studioName1"></span></a>
+        <a class="navbar-brand" href="index.html" id="firstName1" >Elizabeth Muniot<span id="studioName1"></span></a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
@@ -63,8 +63,8 @@
 
 
 
-<div class="white-text-container background-image-container" style="background-image: url('./assets/images/hero3.jpg')">
-    <div class="opacity"></div>
+<div class="white-text-container background-image-container" style="background-image: url('./assets/images/hero3-min.jpg')">
+    <div class="opacity">
         <div class="container">
             <div class="row heroRow">           
                 <div class="col-md-6 containerTitleFlex">
@@ -176,7 +176,7 @@
                         </a>
                       </p>
                     <div>
-                        <p><small>© Elizabeth Muniot 2021</small</p> 
+                        <p><small>© Elizabeth Muniot 2021</small></p> 
                         <p class="footerTextCreate"><small>Website created with care by <a href="https://www.davidtesno.com/" class="link-like-text">David Tesno</a></small></p>    
                         <p><small><a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a>/<a href="http://www.pexels.com/" class="link-like-text" title="Free Stock Photos & videos by Talented Creators">Pexels</a>/<a href="http://mailchimp.com/" class="link-like-text" title="Marketing smarts for big ideas">MailChimp</a></small></p>    
                     </div>    
@@ -223,7 +223,7 @@
 </script>
 
 -->
-<script type="text/javascript" src="./main.41beeca9.js"></script>
+<script type="module" src="./main.41beeca9.js"></script>
 <!-- <script type="text/javascript" src="utility.js"></script> -->
 </body>
 
