--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="Mashup templates have been developed by Orson.io team" name="author">
   <!-- Search Engine -->
   <meta name="description" content="Sage Change provides real time virtual yoga, private sessions and coaching. Elizabeth empowers others to reach beyond limitations to achieve goals">
-  <meta name="image" content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3.jpg">
+  <meta name="image" content="https://dt723.github.io/em-yoga-studio/./assets/images/hero3-min.jpg">
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Sage Change - Elizabeth Muniot">
   <meta itemprop="description" content="Sage Change provides real time virtual yoga, private sessions and coaching. Elizabeth empowers others to reach beyond limitations to achieve goals">
