word edits, removed icons

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="row row-center responsiveRow">
                 <div class="col-md-12 center-block section-container-spacer">
                     <div class="text-center">
-                        <h2 class="titleSmartPhone">Welcome to Sage Change</h2>
+                        <h2 class="titleSmartPhone"></h2>
                         <p class="subTitle homeDescription2"> Yoga + Coaching for Sustained Change</p> 
                         <p></p>         
                     </div>
@@ -89,7 +89,7 @@
 
                 <div class="col-md-4 center-block">
                     <div class="fa-container">
-                      <i class="fa heartLogo fa-heart-o fa-3x" aria-hidden="true"></i>
+                      <!-- <i class="fa heartLogo fa-heart-o fa-3x" aria-hidden="true"></i> -->
                     </div>
                     <div class="text-center">
                         <h3>Yoga</h3>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col-md-4 center-block">
                     <div class="fa-container">
-                      <i class="fa commentLogo fa-comment-o fa-3x" aria-hidden="true"></i>
+                      <!-- <i class="fa commentLogo fa-comment-o fa-3x" aria-hidden="true"></i> -->
                     </div>
                     <div class="text-center">
                         <h3>Coaching</h3>
