google meta tag revised

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="og:title" content="Sage Change - Elizabeth Muniot">
   <meta name="og:description" content="Sage Change provides real time virtual yoga, private sessions and coaching. Elizabeth empowers others to reach beyond limitations to achieve goals">
   <meta name="og:type" content="website">
-  <meta name="google-site-verification" content="TAK-kB4qWeTTadiN542BlEPGjs3uDBtTKjntpQO2mC4" />
+  <meta name="google-site-verification" content="TAK-kB4qWeTTadiN542BlEPGjs3uDBtTKjntpQO2mC4">
  
 
   <!-- Disable tap highlight on IE -->
